--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./style.css" media="screen" title="no title">
 </head>
 <body>
-  <section>
+  <section id="root">
     <main>
       <span id="logo"> Haystack </span>
       <summary>
@@ -28,4 +28,3 @@
   <script src="./script.js" charset="utf-8"></script>
 </body>
 </html>
- 
