added animations and event listeners

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
         <p> We will launch as invite-only in January 2017, Sign up now to recieve 5 invites. </p>
       </summary>
     </main>
-    <div class="card slide-in left"> </div>
-    <div class="card slide-in left"> </div>
-    <div class="card slide-in left"> </div>
-    <div class="card slide-in left"> </div>
-    <div class="card slide-in left"> </div>
-    <div class="card slide-in right"> </div>
-    <div class="card slide-in right"> </div>
-    <div class="card slide-in right"> </div>
-    <div class="card slide-in right"> </div>
-    <div class="card slide-in right"> </div>
+    <div class="cards">
+      <div class="card left-move"></div>
+      <div class="card left-move"></div>
+      <div class="card left-move"></div>
+      <div class="card left-move"> </div>
+      <div class="card left-move"> </div>
+      <div class="card right-move"> </div>
+      <div class="card right-move"> </div>
+      <div class="card right-move"> </div>
+      <div class="card right-move"> </div>
+      <div class="card right-move"> </div>
+    </div>
   </section>
   <script src="./script.js" charset="utf-8"></script>
 </body>
 </html>
- 
