--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Haystack</title>
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./style.css" media="screen" title="no title">
 </head>
 <body>
   <section id="root">
     <main>
-      <span id="logo"> Haystack </span>
+      <span id="logo">Haystack.</span>
       <summary>
-        <p>  The easiest way to meet new people you click with.  </p>
-        <p> We will launch as invite-only in January 2017, Sign up now to recieve 5 invites. </p>
+        <p class="tagline"> Chat to someone <span class="u">exactly</span>  like you </p>
+        <p class="details"> January 2017 </p>
       </summary>
     </main>
     <div class="cards">
-      <div class="card left-move"></div>
-      <div class="card left-move"></div>
-      <div class="card left-move"></div>
-      <div class="card left-move"> </div>
-      <div class="card left-move"> </div>
-      <div class="card right-move"> </div>
-      <div class="card right-move"> </div>
-      <div class="card right-move"> </div>
-      <div class="card right-move"> </div>
-      <div class="card right-move"> </div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in right-move"></div>
+      <div class="card slide-in right-move"></div>
+      <div class="card slide-in right-move"></div>
+      <div class="card slide-in right-move"></div>
+      <div class="card slide-in right-move"></div>
     </div>
   </section>
   <script src="./script.js" charset="utf-8"></script>
