styles and animations are pretty much there

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="./style.css" media="screen" title="no title">
 </head>
 <body>
-  <section id="root">
+  <section id="root" class="vignette">
     <main>
       <span id="logo">Haystack.</span>
       <summary>
-        <p class="tagline"> Chat to someone <span class="u">exactly</span>  like you </p>
-        <p class="details"> January 2017 </p>
+        <p class="tagline">What if there was a super quick way to chat with someone exactly like you? </br></br> We got you fam. 💪 </p>
+        <p class="details"> Feburary 2017 </p>
       </summary>
     </main>
     <div class="cards">
