--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Haystack</title>
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./style.css" media="screen" title="no title">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <section id="root" class="vignette">
