--- a/v1/index.html
+++ b/v1/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<!-- saved from url=(0034)http://arimado.github.io/haystack/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <title>Haystack</title>
-  <!-- <link href="./css.css" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="./style.css" media="screen" title="no title">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <section id="root" class="vignette">
+
     <main>
-      <span id="logo">Haystack.</span>
+      <span id="logo">Haystack</span>
       <summary>
-        <p class="tagline">What if there was a super quick way to chat with someone exactly like you? <br><br> We got you fam. 💪 </p>
-        <p class="details"> Feburary 2017 </p>
+        <p class="tagline">We're building the fastest way to chat with someone that actually gets you</p>
+        <p class="details"> Check out how it works below </p>
+        <p class="down-chevron">👇</p>
       </summary>
     </main>
     <div class="cards">
-      <div class="card slide-in left-move slide-in-right"></div>
-      <div class="card slide-in left-move slide-in-left"></div>
-      <div class="card slide-in left-move slide-in-right"></div>
       <div class="card slide-in left-move"></div>
-      <div class="card slide-in left-amove"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
+      <div class="card slide-in left-move"></div>
       <div class="card slide-in right-move"></div>
       <div class="card slide-in right-move"></div>
       <div class="card slide-in right-move"></div>
@@ -29,10 +32,94 @@
       <div class="card slide-in right-move"></div>
     </div>
   </section>
-  <section>
-    Hi
+  <section id="product">
+    <div class="container">
+      <div class="row section">
+        <div class="col-xs-6">
+          <div class="animation">
+            <div id="index-animation"></div>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="row-inner-content"> 1. Instead of only swiping through faces - you swipe through a set of questions that people make themsleves.</div>
+
+        </div>
+      </div>
+
+      <div class="row section">
+        <div class="col-xs-6">
+          <div class="animation">
+            <div id="match-animation"></div>
+          </div>
+        </div>
+        <div class="col-xs-6 row-content">
+          <div class="row-inner-content"> 2. You match by getting them correct!</div>
+        </div>
+      </div>
+
+
+      <div class="row section">
+        <div class="col-xs-6">
+          <div class="animation">
+
+          </div>
+        </div>
+        <div class="col-xs-6 row-content">
+          <div class="row-inner-content"> 3. Giving you full control of who and how you match!</div>
+        </div>
+      </div>
+
+
+      <div class="row section">
+        <div class="col-xs-6">
+          <div class="animation">
+
+          </div>
+        </div>
+        <div class="col-xs-6 row-content">
+          <div class="row-inner-content"> 4. You already know what to talk about!</div>
+        </div>
+      </div>
+    </div>
+
+
+
   </section>
+  <section id="call-to-action">
+    <!-- Begin MailChimp Signup Form -->
+    <summary>
+      <p class="cta-text">When we launch it's going to be invite only. Get an invite to your email below.</p>
+    </summary>
+
+    <div class="sign-up-form">
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+
+    </style>
+    <div id="mc_embed_signup">
+    <form action="//Haystack.us15.list-manage.com/subscribe/post?u=943197070052f9c0d519e8c5e&amp;id=ae69096279" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+
+    <div class="mc-field-group">
+      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email">
+    </div>
+      <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_943197070052f9c0d519e8c5e_ae69096279" tabindex="-1" value=""></div>
+        <div class="clear"><input type="submit" value="Get an invite." name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+    </form>
+    </div>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <!--End mc_embed_signup-->
+    </div>
+  <section>
+
+  <script src="./animations/index/index_v2.3.js" charset="utf-8"></script>
+  <script src="./animations/match/match_v2.2.js" charset="utf-8"></script>
+  <script src="bodymovin.js" charset="utf-8"></script>
   <script src="./script.js" charset="utf-8"></script>
-
-
-</body></html>
+</body>
+</html>
