basically got all the copy done for the fb ad

--- a/v1/index.html
+++ b/v1/index.html
@@ -35,49 +35,50 @@
   <section id="product">
     <div class="container">
       <div class="row section">
-        <div class="col-xs-6">
+
+        <div class="col-sm-6 col-pull-sm-6 row-content">
+          <div class="row-inner-content">
+            <h1> Go deeper </h1>
+            You swipe through a set of questions that people create.
+          </div>
+
+        </div>
+        <div class="col-sm-6 col-push-sm-6">
           <div class="animation">
             <div id="index-animation"></div>
           </div>
         </div>
-        <div class="col-xs-6">
-          <div class="row-inner-content"> 1. Instead of only swiping through faces - you swipe through a set of questions that people make themsleves.</div>
-
-        </div>
       </div>
 
       <div class="row section">
-        <div class="col-xs-6">
+
+        <div class="col-sm-6 col-pull-sm-6 row-content">
+          <div class="row-inner-content">
+            <h1> Work for it</h1>
+            You match by trying to get them all correct!
+          </div>
+        </div>
+        <div class="col-sm-6 ">
           <div class="animation">
             <div id="match-animation"></div>
           </div>
         </div>
-        <div class="col-xs-6 row-content">
-          <div class="row-inner-content"> 2. You match by getting them correct!</div>
-        </div>
       </div>
 
 
       <div class="row section">
-        <div class="col-xs-6">
-          <div class="animation">
 
+        <div class="col-sm-6 col-pull-sm-6 row-content">
+          <div class="row-inner-content">
+            <h1> Take control </h1>
+              For everyone that passes your test you still choose to accept to have a convo. <br /><br />  No unsolicited messages or 🍆.
           </div>
         </div>
-        <div class="col-xs-6 row-content">
-          <div class="row-inner-content"> 3. Giving you full control of who and how you match!</div>
-        </div>
-      </div>
 
-
-      <div class="row section">
-        <div class="col-xs-6">
+        <div class="col-sm-6 ">
           <div class="animation">
-
+            <div id="result-animation"></div>
           </div>
-        </div>
-        <div class="col-xs-6 row-content">
-          <div class="row-inner-content"> 4. You already know what to talk about!</div>
         </div>
       </div>
     </div>
@@ -88,7 +89,7 @@
   <section id="call-to-action">
     <!-- Begin MailChimp Signup Form -->
     <summary>
-      <p class="cta-text">When we launch it's going to be invite only. Get an invite to your email below.</p>
+      <p class="cta-text">We're launching as invite only at the end of this year.</br> </br> 👇</p>
     </summary>
 
     <div class="sign-up-form">
@@ -119,6 +120,7 @@
 
   <script src="./animations/index/index_v2.3.js" charset="utf-8"></script>
   <script src="./animations/match/match_v2.2.js" charset="utf-8"></script>
+  <script src="./animations/result/result_v2.1.js" charset="utf-8"></script>
   <script src="bodymovin.js" charset="utf-8"></script>
   <script src="./script.js" charset="utf-8"></script>
 </body>
